--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@ a {
 	color: #0000ff;
 }
 pre {
-	width: 80ch;
+	max-width: 80ch;
 	white-space: pre-wrap;
 }
 </style>
-
-<!-- script -->
-<script>
-</script>
 
 </head>
 
@@ -40,204 +36,44 @@ pre {
 
 <!-- pre -->
 <pre>
-Kenneth Forsbäck
+Kenneth Forsbäck &#60;domain&#62;
 
 (A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.)
 
 <strong>ARTS</strong>
 <hr/>
-games, computer, tabletop, athletic
-stories, writing, darwing
-
-<strong>200107</strong>
-  ai, stealth
-<strong>200203</strong>
-  roleplaying system, might and magic 8
-  7 attributes
-  might, intellect, endurance, personality, accuracy, speed, luck
-<strong>200406</strong>
-  roleplaying system, dungeons and dragons
-  6 attributes
-  strength, dexterity, constitution, intelligence, wisdom, charisma
-<strong>200711</strong>
-  ai, social
-<strong>200806</strong>
-  roleplaying system, might and magic 8
-  4 attributes
-  might, magic, intellect, charisma
-<strong>200806</strong>
-  roleplaying system, might and magic 8, gurps
-  4 attributes
-  strength, endurance, agility, awareness
-<strong>200807</strong>
-  roleplaying system, might and magic 8
-  5 attributes
-  strength, endurance, agility, awareness, learning
-<strong>200807</strong>
-  roleplaying system, might and magic 8, dungeons and dragons
-  3 attributes
-  exert, sense, apply
-<strong>201007</strong>
-  roleplaying system, bushido blade
-  3 attributes
-  force, fatigue, finesse
-<strong>201102</strong>
-  roleplaying system, the dark crystal
-  4 attributes
-  body, mind, heart, soul
-<strong>201108</strong>
-  roleplaying system, discworld
-  3 attributes
-  take, hold, give
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <strong>SCIENCE</strong>
 <hr/>
-computing, information
-networking, communication
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-<strong>200212</strong>
-  network, quakenet, messaging, gaming platform
-<strong>200406</strong>
-  programming language, extension, lua, pawn, quakec
-<strong>200406</strong>
-  graphical interface
+<strong>200403</strong>
+  An extension programming language inspired by Lua.
 <strong>200410</strong>
-  programming language, system, c
-<strong>200411</strong>
-  programming language, stream, perl
-<strong>200503</strong>
-  network, disquiet
-<strong>200504</strong>
-  digital identification card, id smart card
-<strong>200506</strong>
-  longplay, a software environment to allow games to be played on a PC like on a console, game manager, game library, fullscreen gui similar to a console
-<strong>200507</strong>
-  mesh format, textual, binary
-<strong>200507</strong>
-  satellite internet
-<strong>200508</strong>
-  package manager
-  package composer
-  package format
-<stroing>200508</strong>
-  network, deafmute
-<strong>200509</strong>
-  calculation language, bc
-<strong>200511</strong>
-  augmented reality glasses
-<strong>200512</strong>
-  file system format
-<strong>200512</strong>
-  file system layout
+  A system programming language inspired by C.
 <strong>200602</strong>
-  isa, risc, misc, cisc, mips r2000, arm7, motorola 68000, zilog z8, intel 80386
+  I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
+  With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
+  Despite growing up on the x86 architecture and AMD being my processor of choice since K6 I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as future desktop architectures.
 <strong>200602</strong>
-  200602, 200705
-  32-bit risc, mips r2000, arm7
+  A 32-bit RISC architecture inspired by MIPS R2000 and ARM7TDMI.
 <strong>200602</strong>
-  200602, 201411
-  16-bit risc
-<strong>200602</strong>
-  optical processor
-<strong>200602</strong>
-  object code, bit code
-<strong>200603</strong>
-  ballistics, accurate and approximate models
-<strong>200608</strong>
-  textual interface, terminal
-<strong>200611</strong>
-  immutable system and file system, read-only, read-prefer, read-write
-<strong>200611</strong>
-  programming language, minimal, mm8 bytecode, brainfuck
-<strong>200611</strong>
-  image format, archive
-<strong>200611</strong>
-  format, drawing, cad
-<strong>200611</strong>
-  object code, byte code
-<strong>200612</strong>
-  volume system to replace mbr
-<strong>200704</strong>
-  cell-based approximation of the atmosphere and the climate
-  started out as a means of simulating atmospheres in a science fiction space simulator game inspired by Freelancer
+  A 16-bit RISC architecture inspired by ARM7TDMI (Thumb) and 6502.
 <strong>200705</strong>
-  200705, 201411
-  8-bit misc
-<strong>200712</strong>
-  programming language, spreadsheet
-<strong>200712</strong>
-  array processing unit
-<strong>200712</strong>
-  standard, uniform time format
-<strong>200712</strong>
-  configuration system, C
-<strong>200712</strong>
-  object code, type code
-<strongh>200712</strong>
-  kernel
+  A 8-bit MISC architecture inspired by Z80, 8080, and 6502.
 <strong>200803</strong>
-  8-bit risc
-<strong>200803</strong>
-  64-bit cisc
-<strong>200803</strong>
-  128-bit cisc
-<strong>200803</strong>
-  director, c, make
-<strong>200803</strong>
-  system processing unit
-<strong>200803</strong>
-  description language, hardware, logic, verilog
-<strong>200803</strong>
-  ergō sum
-  an exercise in the great unexplainable
-  fictional equations and concepts for a science fiction constructed world
-  the ζ (zeta) paradox
+  A hardware description language inspired by Verilog.
 <strong>200804</strong>
-  description language, data serialisation, C, assembly
-<strong>200807</strong>
-  logical layer inspired by .NET and other abstraction and virtualisation
-<strong>201003</strong>
-  kernel similar to L4
-<strong>201102</strong>
-  programming language, scientific, calculation, mathcad, scilab
+  A data description language inspired by C.
 <strong>201111</strong>
-  a managed system programming language inspired by Lua and C++
+  A managed system programming language inspired by Lua and C++.
 <strong>201201</strong>
-  a functional programming language inspired by Lisp
-<strong>201204</strong>
-  handheld computer, handheld pc
-<strong>201209</strong>
-  locale system
-<strong>201308</strong>
-  logical kernel
-<strong>201503</strong>
-  4-bit misc
-<strong>201710</strong>
-  network, social reality
-
-<strong>2004-2006</strong>
-  AI designs inspired by ALICE, ELIZA, Ghost in the Shell, ghosts that need to learn, mobile device that you would take with you to allow it to learn language, process visual and aural information, etc.
-
-<strong>unknown</strong>
-  programming language, system, embedded
-<strong>unknown</strong>
-  compound telescope made up of thousands of smaller mirrors
-  automated and self-maintaining system
-  sensor array system for imaging in multiple wavelengths
+   A functional programming language inspired by Lisp.
 
 <strong>HERITAGE</strong>
 <hr/>
-culture
-language
-worship
-
-<strong>200307</strong>
-  started researching my native ostrobothnian language, after first using it as a basis for constructed languages in roleplaying games around 2002-2003
-<strong>200501</strong>
-  my grandfather died and the seed for heathenism was planted, but I would be an atheist and an anti-Abrahamic antitheist for many years
-
-<strong>2012</strong>
-  I embraced the ancient way and heathen worship
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </pre>
 
 </body>
