--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>200602</strong>
   A 16-bit RISC architecture inspired by ARM7TDMI (Thumb) and Z80.
 <strong>200705</strong>
-  An 8-bit RISC architecture inspired by Z80, 8080, and 6502.
+  An 8-bit RISC architecture inspired by Z80 and 6502.
 <strong>200803</strong>
   A hardware description language inspired by Verilog.
+<strong>200803</strong>
+  An 8-bit MISC architecture inspired by Z80 and 6502.
 <strong>200804</strong>
   A data description language inspired by C.
 <strong>201111</strong>
