--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   A 32-bit RISC architecture inspired by MIPS R3000 and ARM7TDMI.
 <strong>200602</strong>
   A 16-bit RISC architecture inspired by ARM7TDMI (Thumb) and Z80.
+<strong>200602</strong>
+  A system for explicit cache management inspired by ARM7TDMI and 6800, allowing for precise control over data flow with separate instructions that guide the processor as to which memory sections are needed. Later expanded by the concept of immediate memory for multiple levels of explicitly managed memory.
+<strong>200611</strong>
+  A firmware environment for managing and loading system environments (firmware applications and/or operating systems) inspired by BIOS and coreboot.
+<strong>200612</strong>
+  A volume system for partitioning and management of storage media inspired by MBR.
 <strong>200705</strong>
   An 8-bit variable-length RISC architecture inspired by Z80 and 6800.
+<strong>200712</strong>
+  A system for user-accessible on-die immediate memory inspired by Z8.
 <strong>200803</strong>
   A hardware description language inspired by Verilog.
 <strong>200803</strong>
@@ -76,6 +84,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>HERITAGE</strong>
 <hr/>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+<strong>(1996)</strong>
+  I began to wonder why our language was different from Swedish in so many ways, why our pronunciation and grammar was different, and why we couldn't study it in school.
+<strong>200305</strong>
+  I started researching my native Ostrobothnian language after first using it as an inspiration for constructed languages in roleplaying games.
+<strong>?</strong>
 </pre>
 
 </body>
