--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>200611</strong>
   A firmware environment for managing and loading system environments (firmware applications and/or operating systems) inspired by BIOS and coreboot.
 <strong>200612</strong>
-  A volume system for partitioning and management of storage media inspired by MBR.
+  A system for volume partitioning and management inspired by MBR.
 <strong>200705</strong>
   An 8-bit variable-length RISC architecture inspired by Z80 and 6800.
 <strong>200712</strong>
