--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   A system for explicit cache management inspired by ARM7TDMI and 6800, allowing for precise control over data flow with separate instructions that guide the processor as to which memory sections are needed. Later expanded by the concept of immediate memory for multiple levels of explicitly managed memory.
 <strong>200611</strong>
   A firmware environment for managing and loading system environments (firmware applications and/or operating systems) inspired by BIOS and coreboot.
+<strong>200611</strong>
+  A hardware hypervisor for virtualisation, management, and monitoring of execution inspired by ARM7TDMI.
 <strong>200612</strong>
   A system for volume partitioning and management inspired by MBR.
 <strong>200705</strong>
