--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   A hardware description language inspired by Verilog.
 <strong>200803</strong>
   An 8-bit fixed-length MISC architecture inspired by Z80 and 6800.
+<strong>200803</strong>
+  A director for management of compilation inspired by C and make.
 <strong>200804</strong>
   A data description language inspired by C.
 <strong>201111</strong>
@@ -91,7 +93,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   I began to wonder why our language was different from Swedish in so many ways, why our pronunciation and grammar was different, and why we couldn't study it in school.
 <strong>200305</strong>
   I started researching my native Ostrobothnian language after first using it as an inspiration for constructed languages in roleplaying games.
-<strong>?</strong>
 </pre>
 
 </body>
