--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>200803</strong>
   An 8-bit fixed-length MISC architecture inspired by Z80 and 6800.
 <strong>200803</strong>
-  A director for management of compilation inspired by C and make.
+  A director with directives and directive files for monitoring and management of compilation inspired by C and make.
 <strong>200804</strong>
   A data description language inspired by C.
 <strong>201111</strong>
