--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   An 8-bit variable-length RISC architecture inspired by Z80 and 6800.
 <strong>200712</strong>
   A system for user-accessible on-die immediate memory inspired by Z8.
+<strong>200712</strong>
+  A tripartite system of machine-readable object code, being bit code, byte code, and type code, inspired by Lua byte code.
 <strong>200803</strong>
   A hardware description language inspired by Verilog.
 <strong>200803</strong>
