--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   An extension programming language inspired by Lua.
 <strong>200410</strong>
   A system programming language inspired by C.
+<strong>200512</strong>
+  A file system layout inspired by Filesystem Hierarchy Standard.
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
   With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
