--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   A firmware environment for managing and loading system environments (firmware applications and/or operating systems) inspired by BIOS and coreboot.
 <strong>200611</strong>
   A hardware hypervisor for virtualisation, management, and monitoring of execution inspired by ARM7TDMI.
+<strong>200611</strong>
+  An immutable system and file system inspired by game packages (Doom and The Elder Scrolls 3: Morrowind) and Apple Disk Images. Intended to make management and maintenance easier by keeping a system read-only as much as possible.
+  The file system layout is categorised into read-only, read-prefer, and read-write, where writing to the system is allowed only in excluded paths (such as user paths) or through a transactional system, and non-user data is distributed through packages mounted as read-only in a hierarchial load order.
+  Revisions and patches are mounted after the base to allow for simple modification and updates without always having to change the base image.
 <strong>200612</strong>
   A system for volume partitioning and management inspired by MBR.
 <strong>200705</strong>
