--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   A hardware hypervisor for virtualisation, management, and monitoring of execution inspired by ARM7TDMI.
 <strong>200611</strong>
   An immutable system and file system inspired by game packages (Doom and The Elder Scrolls 3: Morrowind) and Apple Disk Images. Intended to make management and maintenance easier by keeping a system read-only as much as possible.
-  The file system layout is categorised into read-only, read-prefer, and read-write, where writing to the system is allowed only in excluded paths (such as user paths) or through a transactional system, and non-user data is distributed through packages mounted as read-only in a hierarchial load order.
+  The file system layout is categorised into read-only, read-prefer, and read-write, where writing to the system is allowed only in excluded paths (such as user paths) or through a transactional system, and non-user data is distributed through images mounted as read-only in a hierarchial load order.
   Revisions and patches are mounted after the base to allow for simple modification and updates without always having to change the base image.
 <strong>200612</strong>
   A system for volume partitioning and management inspired by MBR.
@@ -99,6 +99,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 <strong>(1996)</strong>
   I began to wonder why our language was different from Swedish in so many ways, why our pronunciation and grammar was different, and why we couldn't study it in school.
+<!--
+  My patrilinea heritage is North Germanic and my matrilineal Finnic, but Ostrobothnian is my primary
+  While standard Finland Swedish is what is tought to us in school
+-->
 <strong>200305</strong>
   I started researching my native Ostrobothnian language after first using it as an inspiration for constructed languages in roleplaying games.
 </pre>
