--- a/index.html
+++ b/index.html
@@ -98,13 +98,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <strong>(1996)</strong>
-  I began to wonder why our language was different from Swedish in so many ways, why our pronunciation and grammar was different, and why we couldn't study it in school.
-<!--
-  My patrilinea heritage is North Germanic and my matrilineal Finnic, but Ostrobothnian is my primary
-  While standard Finland Swedish is what is tought to us in school
--->
+  I grew up in Ostrobothnia with my patrilineal heritage being North Germanic (Ostrobothnia) and my matrilineal Finnic (Rauma), with my Ostrobothnian heritage being primary and what I bear foremost.
+  While standard Finland Swedish is what we learn in school, our language having no standardisation, no formal recognition, and no teaching material, it is not my native language and not what I use outside of writing.
+  Several colloquial writing systems exist for our language, but even then there is no standardisation and the language can vary moderately between speakers, as such many resort to writing in Finland Swedish and code switching from and to our native language.
+  Despite not being tought in school we did discuss our so called dialect and how it differed from Finland Swedish, and that it is a richness that we should hold on to. It was in primary school (fifth grade) were I began to truly wonder why our language was different from Finland Swedish in so many ways, in pronunciation, grammar, and vocabulary, and why we couldn't study it in school.
 <strong>200305</strong>
   I started researching my native Ostrobothnian language after first using it as an inspiration for constructed languages in roleplaying games.
+<!--
+I started working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive by
+-->
 </pre>
 
 </body>
