--- a/index.html
+++ b/index.html
@@ -102,11 +102,17 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   While standard Finland Swedish is what we learn in school, our language having no standardisation, no formal recognition, and no teaching material, it is not my native language and not what I use outside of writing.
   Several colloquial writing systems exist for our language, but even then there is no standardisation and the language can vary moderately between speakers, as such many resort to writing in Finland Swedish and code switching from and to our native language.
   Despite not being tought in school we did discuss our so called dialect and how it differed from Finland Swedish, and that it is a richness that we should hold on to. It was in primary school (fifth grade) were I began to truly wonder why our language was different from Finland Swedish in so many ways, in pronunciation, grammar, and vocabulary, and why we couldn't study it in school.
+<strong>200206</strong>
+  I started working with constructed languages due to being inspired by Might and Magic 8 and other games to make my own worlds and languages.
 <strong>200305</strong>
-  I started researching my native Ostrobothnian language after first using it as an inspiration for constructed languages in roleplaying games.
-<!--
-I started working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive by
--->
+  I started working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive, and I decided to use my native language and Finnish as inspiration. I eventually become curious as to why our language was they way it was, rekindling an old thought, and moved from constructed languages to linguistics.
+<strong>201112</strong>
+  I had been working with my native language long enough, going so far as to immerse myself in Old Norse, Proto-Germanic, and Proto-Indo-European, trying to determine the development of our language and slowly beginning to realise that it might not be just a Swedish dialect as conventionally classified.
+  As such my intentions for standardisation, regulation, and formal recognition in Finland began to slowly grow, and I also found it relevant to try and classify our language and its relatives.
+<strong>201202</strong>
+  I started working on my own standardisation of writing, having used the colloquial systems before this.
+<strong>201203</strong>
+  I started planning for formal recognition in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language.
 </pre>
 
 </body>
