--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <hr/>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+<strong>(1993)</strong>
+  I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
+  The last part of that course material also stuck in my mind, with the end of the world and of Ask and Embla born out of the tree. Later in life I have come to understand that we still bear traces of this in our language, old figurative words for man and woman being "tain" and "tjalg", both meaning branch or twig.
+  I was too young to care for it more than as stories and fables similar to the comics I was reading, but some of those memories have stuck with me ever since.
+  While it scared me as a child, as an adult I have also come to appreciate how my grandfather used to scare me with the trolls of the well and the forest, and the small stories of their mischief.
 <strong>(1996)</strong>
   I grew up in Ostrobothnia with my patrilineal heritage being North Germanic (Ostrobothnia) and my matrilineal Finnic (Rauma), with my Ostrobothnian heritage being primary and what I bear foremost.
   While standard Finland Swedish is what we learn in school, our language having no standardisation, no formal recognition, and no teaching material, it is not my native language and not what I use outside of writing.
@@ -106,13 +111,26 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   I started working with constructed languages due to being inspired by Might and Magic 8 and other games to make my own worlds and languages.
 <strong>200305</strong>
   I started working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive, and I decided to use my native language and Finnish as inspiration. I eventually become curious as to why our language was they way it was, rekindling an old thought, and moved from constructed languages to linguistics.
+<strong>200501</strong>
+  I attended my grandfather's burial as he had recently died and a small piece of me sprouted from the seed that might have been planted already when I was a child. At the graveyard the priest talked to me and asked me how I was feeling, unknowing that I had been dealing with mental unhealth sinec long before this and my grandfather's death was not the reason for my apparent mood.
+  It was still too early, I was not yet ready, but I ended up mentioning that I would have wanted to pour a cup of ale for my grandfather, that I didn't feel comfortable with the wake.
 <strong>201112</strong>
   I had been working with my native language long enough, going so far as to immerse myself in Old Norse, Proto-Germanic, and Proto-Indo-European, trying to determine the development of our language and slowly beginning to realise that it might not be just a Swedish dialect as conventionally classified.
   As such my intentions for standardisation, regulation, and formal recognition in Finland began to slowly grow, and I also found it relevant to try and classify our language and its relatives.
 <strong>201202</strong>
   I started working on my own standardisation of writing, having used the colloquial systems before this.
 <strong>201203</strong>
-  I started planning for formal recognition in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language.
+  I started planning for formal recognition in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
+<strong>201202</strong>
+  I rediscovered Nordic and Finno-Samic mythology and rekindled an old interest, looking for inspiration in what I should write to showcase my language and standardised writing, and it didn't take long before the smouldering embers began to burn after lying dormant.
+<strong>201407</strong>
+  I had gone through several changes in life and several self-discoveries, slowly leading up to a turning point, and slowly able to shed the pain and weight I carried for almost 15 years.
+  This time around there was no uncertainty and I knew I was to be heathen, to one way or another embrace the old ways, and to find my strength and serenity. Along with several other factors I turned my life around in 2015, ready to look forward to a beautiful future where I was no longer held back by past experiences.
+  I had found myself, seeing my life since the 90s before me and knowing why it had been the way it had, what path I needed to walk and what to look for.
+<strong>201607</strong>
+<!--
+I began planning for how to register and maintain a religious association once I have a standardised (...)
+-->
 </pre>
 
 </body>
