--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   This time around there was no uncertainty and I knew I was to be heathen, to one way or another embrace the old ways, and to find my strength and serenity. Along with several other factors I turned my life around in 2015, ready to look forward to a beautiful future where I was no longer held back by past experiences.
   I had found myself, seeing my life since the 90s before me and knowing why it had been the way it had, what path I needed to walk and what to look for.
 <strong>201607</strong>
-<!--
-I began planning for how to register and maintain a religious association once I have a standardised (...)
--->
+  I began planning for how to register and maintain a religious association once the time was right and I have a working standardisation and its material, a charter ("perustamiskirja") and the bylaws ("yhdyskuntajärjestys").
+  That way I can have my worship formally recognised and registered in the national consensus.
 </pre>
 
 </body>
