--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>201202</strong>
   I started working on my own standardisation of writing, having used the colloquial systems before this.
 <strong>201203</strong>
-  I started planning for formal recognition in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
+  I started planning for formal recognition (and our inclusion in the national census) in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
 <strong>201202</strong>
   I rediscovered Nordic and Finno-Samic mythology and rekindled an old interest, looking for inspiration in what I should write to showcase my language and standardised writing, and it didn't take long before the smouldering embers began to burn after lying dormant.
 <strong>201407</strong>
@@ -129,7 +129,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
   I had found myself, seeing my life since the 90s before me and knowing why it had been the way it had, what path I needed to walk and what to look for.
 <strong>201607</strong>
   I began planning for how to register and maintain a religious association once the time was right and I have a working standardisation and its material, a charter ("perustamiskirja") and the bylaws ("yhdyskuntajärjestys").
-  That way I can have my worship formally recognised and registered in the national consensus.
+  That way I can have my worship formally recognised and registered in the national census.
 </pre>
 
 </body>
