--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>200305</strong>
   I started working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive, and I decided to use my native language and Finnish as inspiration. I eventually become curious as to why our language was they way it was, rekindling an old thought, and moved from constructed languages to linguistics.
 <strong>200501</strong>
-  I attended my grandfather's burial as he had recently died and a small piece of me sprouted from the seed that might have been planted already when I was a child. At the graveyard the priest talked to me and asked me how I was feeling, unknowing that I had been dealing with mental unhealth sinec long before this and my grandfather's death was not the reason for my apparent mood.
+  I attended my grandfather's burial as he had recently died and a small piece of me sprouted from the seed that might have been planted already when I was a child. At the graveyard the priest talked to me and asked me how I was feeling, unknowing that I had been dealing with mental unhealth since long before this and my grandfather's death was not the reason for my apparent mood.
   It was still too early, I was not yet ready, but I ended up mentioning that I would have wanted to pour a cup of ale for my grandfather, that I didn't feel comfortable with the wake.
 <strong>201112</strong>
   I had been working with my native language long enough, going so far as to immerse myself in Old Norse, Proto-Germanic, and Proto-Indo-European, trying to determine the development of our language and slowly beginning to realise that it might not be just a Swedish dialect as conventionally classified.
